@@ -1,3 +1,6 @@
+2009-12-29  Michiel Roos <michiel@netcreators.com>
+	* Feature: #12408: Integrate flash uploader into DAM (Thanks to Dan Osipov)
+
 2009-12-21  Michiel Roos <michiel@netcreators.com>
 	* Fixed bug #9830: Not responing queries using category selections (Thanks to Peter Kuehn)
 
